[gd_scene load_steps=2 format=3 uid="uid://c9y3l4m5n6o7"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HUD" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -60.0
offset_right = 0.0
offset_bottom = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
text = "Score: 0"
theme_override_font_sizes/font_size = 24

[node name="Spacer" type="Control" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HighScoreLabel" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
text = "Best: 0"
theme_override_font_sizes/font_size = 24

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Scene Title"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="ScenarioLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Scenario text goes here..."
horizontal_alignment = 1
autowrap_mode = 3
theme_override_font_sizes/font_size = 20

[node name="ChoicesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Feedback"
horizontal_alignment = 1
autowrap_mode = 3
theme_override_font_sizes/font_size = 22

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue ➡️"

[node name="FeelingQuestionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "How do they feel?"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="FeelingsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1